fix drawer visibility I hope

--- a/ttk.css
+++ b/ttk.css
@@ -97,6 +97,9 @@ a span.invisible {
   font-size: 24px;
   margin-right: 32px;
 }
+.mdl-layout__drawer-button {
+	color: #263238;
+}
 
 /* ========
  DARK MODE
